slider (image on small mobile) was fixed

--- a/css/style.css
+++ b/css/style.css
@@ -1654,14 +1654,6 @@ input[type=number] {
           transform: translate(0px, -50%);
 }
 
-.coach__arrow:hover {
-  opacity: 0.6;
-}
-
-.coach__arrow:active {
-  opacity: 1;
-}
-
 .coach__prev {
   left: 0;
 }
@@ -2714,6 +2706,14 @@ input[type=number] {
     -webkit-transform: translateY(2px);
     -ms-transform: translateY(2px);
         transform: translateY(2px);
+  }
+
+  .coach__arrow:hover {
+    opacity: 0.6;
+  }
+
+  .coach__arrow:active {
+    opacity: 1;
   }
 
   .requestform__btn:hover {
@@ -3834,6 +3834,24 @@ input[type=number] {
   .coach__block::before,
   .coach__block::after {
     display: none;
+  }
+
+  .coach__arrow svg {
+    width: 1rem;
+    height: 2rem;
+  }
+
+  .coach__slider {
+    height: 368px;
+    max-width: 290px;
+  }
+
+  .coach__swiper .swiper-slide-active .coach__title {
+    font-size: 24px;
+  }
+
+  .coach__swiper .swiper-pagination {
+    margin-top: 40px;
   }
 
   .list__first-column {
